feat: estructura 100% responsive y footer pendiente de ajuste en pantallas grandes

--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -40,8 +40,6 @@ main {
     padding-top: 4.8rem;
 }
 
-
-
 #inicio,
 #aboutMe,
 #miLabor,
@@ -63,10 +61,6 @@ main {
     background-color: #ffffff;
     z-index: 999;
 }
-
-
-
-
 
 
 .cont-header img {
@@ -95,11 +89,7 @@ main {
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
-
-
 }
-
-
 
 
 .menuList li {
@@ -163,6 +153,8 @@ main {
 }
 
 /*===========================MAIN================================================*/
+
+/*========================HERO==============================*/
 .bg-hero {
     position: relative;
     background-image: url(../media/img/dibujo2.jpg);
@@ -276,9 +268,9 @@ main {
 
 .cont-text img {
 
-    width: 200px;
+    width: 150px;
     border-radius: 50%;
-    margin: 2rem 0;
+    padding: 2rem 0;
 }
 
 .cont-text h3 {
@@ -294,8 +286,10 @@ main {
 .cont-text p {
     margin: 0;
     line-height: 1.7;
-    width: 80%;
+    width: 90%;
     margin: auto;
+    padding-top: 1rem;
+
     text-align: center;
 
 }
@@ -373,11 +367,11 @@ main {
     font-size: 1.2rem;
     padding-bottom: 0.3rem;
     margin: 0;
-    border-bottom: 1px solid #f1b127 ;
+    border-bottom: 1px solid #f1b127;
 }
 
 .cont-contacto p a {
-    text-decoration:none;
+    text-decoration: none;
     color: #000000;
 
 }
@@ -397,32 +391,824 @@ main {
 /*===========================Footer===============================================*/
 .cont-footer {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
-    padding: 1rem 0;
     background-color: #171717;
 
     border: 1px solid;
+}
 
+.cont-footer h5 {
+
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid var(--color-border-card);
+    padding-bottom: 0.3rem;
 
 }
 
-.cont-footer p, a {
+
+.title-body {
+
+    grid-column: 1/ -1;
+}
+
+.title-body img {
+
+    width: 150px;
+    height: auto;
+    padding-top: 1rem;
+}
+
+.title-body {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.body-contacto,
+.body-politica {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.body-contacto p,
+.body-politica p {
+
+    padding-bottom: 1rem;
+    font-size: 0.8rem;
+    text-align: left;
+}
+
+
+.foot-footer {
+
+    grid-column: 1/ -1;
+    text-align: center;
+    padding: 1rem ;
+   
+}
+
+
+
+
+
+
+
+
+
+.cont-footer p,
+a {
 
     margin: 0;
     color: #dddddd;
-    
+    text-decoration: none;
+
 }
 
 
+/* =====================
+   MEDIA QUERIES RESPONSIVE
+   ===================== */
 
-.cont-footer img {
+/* Móviles XS (≤575px) */
+@media (max-width: 575px) {
+    body::before {
+        content: "XS";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background: rgb(185, 6, 6);
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        z-index: 9999;
 
-    width: 100px;
+    }
+}
+
+/*SM: Móviles pequeños verticales y móviles estándar(576px – 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+    body::before {
+        content: "SM";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background: rgb(0, 255, 30);
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        z-index: 9999;
+
+    }
+
+    /*===========================HERO===============================================*/
+
+    .bg-hero {
+        min-height: 80vh !important;
+    }
+
+    .cont-hero h1 {
+        margin: 0;
+        color: var(--color-principal);
+        font-size: 3.2rem;
+        text-align: center;
 
 
+    }
+
+
+    .cont-hero p {
+
+        font-size: 1.6rem;
+        margin: 0;
+        text-align: center;
+        color: var(--color-secundario);
+
+    }
+
+    .cont-hero a {
+
+        color: black;
+        text-decoration: none;
+        border: 1px solid #000000;
+        padding: 0.5rem;
+        background-color: var(--color-principal);
+        border-radius: 0.4rem;
+    }
+
+    /*===========================SOBRE MI===============================================*/
+
+
+
+}
+
+/*MD: Tablets verticales (768px – 991px) */
+@media (min-width: 768px) and (max-width: 991px) {
+    body::before {
+        content: "MD";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background: rgb(1, 22, 255);
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        z-index: 9999;
+    }
+
+    #inicio,
+    #aboutMe,
+    #miLabor,
+    #contacto {
+        scroll-margin-top: 3rem;
+        /* lo que mida tu nav fijo */
+    }
+
+
+    /*===========================HERO===============================================*/
+
+    .bg-hero {
+        min-height: 85vh !important;
+    }
+
+    .cont-hero h1 {
+        margin: 0;
+        color: var(--color-principal);
+        font-size: 3.2rem;
+        text-align: center;
+
+
+    }
+
+
+    .cont-hero p {
+
+        font-size: 1.6rem;
+        margin: 0;
+        text-align: center;
+        color: var(--color-secundario);
+
+    }
+
+    .cont-hero a {
+
+        color: black;
+        text-decoration: none;
+        border: 1px solid #000000;
+        padding: 0.5rem;
+        background-color: var(--color-principal);
+        border-radius: 0.4rem;
+    }
+}
+
+/* Tablets horizontales / laptops pequeñas-mini LG (992px – 1199px) */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+    body::before {
+        content: "LG";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background: rgb(196, 1, 255);
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        z-index: 9999;
+
+    }
+
+    /*===========================HEADER===============================================*/
+
+    #inicio,
+    #aboutMe,
+    #miLabor,
+    #contacto {
+        scroll-margin-top: 5rem !important;
+        /* lo que mida tu nav fijo */
+    }
+
+    .styleH2 {
+
+        font-size: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .cont-header {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 1rem;
+
+    }
+
+    .menuList {
+        position: static;
+        height: auto;
+        width: auto;
+        background-color: transparent;
+        margin: 0;
+        padding: 0;
+    }
+
+    .menuList li {
+
+        border-bottom: none;
+        font-size: 1rem;
+        padding: 1rem 0 0 1.5rem;
+    }
+
+    .cont-header ul {
+        display: flex !important;
+        flex-direction: row !important;
+        gap: 1rem;
+        list-style: none;
+    }
+
+
+    .btn-hamburger {
+
+        display: none;
+    }
+
+    #listMenu.ocultoMenu {
+        display: block;
+    }
+
+    .xxl-none {
+
+        display: none !important;
+    }
+
+    /*===========================HERO===============================================*/
+
+    .bg-hero {
+        min-height: 60vh !important;
+    }
+
+    .cont-hero h1 {
+        margin: 0;
+        color: var(--color-principal);
+        font-size: 3.2rem;
+        text-align: center;
+
+
+    }
+
+
+    .cont-hero p {
+
+        font-size: 1.6rem;
+        margin: 0;
+        text-align: center;
+        color: var(--color-secundario);
+
+    }
+
+    .cont-hero a {
+
+        color: black;
+        text-decoration: none;
+        border: 1px solid #000000;
+        padding: 0.5rem;
+        background-color: var(--color-principal);
+        border-radius: 0.4rem;
+    }
+
+    /*===========================SOBRE MI ===============================================*/
+
+    .cont-text h3 {
+
+        font-size: 2rem;
+        border-bottom: 1px solid var(--color-principal);
+        margin: 0;
+
+
+
+    }
+
+    .cont-text p {
+        margin: 0;
+        line-height: 1.7;
+        width: 90%;
+        margin: auto;
+        font-size: 1.2rem;
+        padding-top: 1rem;
+
+        text-align: center;
+
+    }
+
+
+    /*===========================PROYECTOS===============================================*/
+
+    .grid-cont {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card1 {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: auto;
+        margin-bottom: 2rem;
+
+    }
+
+
+
+    .card1 img {
+
+        width: 100%;
+    }
+
+
+    .img-wrapper {
+        width: 100% !important;
+        aspect-ratio: 16 / 9 !important;
+        overflow: hidden !important;
+    }
+
+    .img-wrapper img {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: cover !important;
+    }
+
+
+
+
+}
+
+/*SXL: laptos pequeñas(1200px – 1279px) */
+@media (min-width: 1200px) and (max-width: 1279px) {
+    body::before {
+        content: "1200px-1279px";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 50px;
+        height: 20px;
+        background: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        z-index: 9999;
+
+    }
+}
+
+/*XL laptos grandes (1280px – 1399px) */
+@media (min-width: 1280px) and (max-width: 1399px) {
+
+    body::before {
+        content: "XL";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 50px;
+        height: 20px;
+        background: rgb(255, 102, 0);
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        z-index: 9999;
+    }
+
+    /*===========================HEADER===============================================*/
+
+    #inicio,
+    #aboutMe,
+    #miLabor,
+    #contacto {
+        scroll-margin-top: 5rem !important;
+        /* lo que mida tu nav fijo */
+    }
+
+    .styleH2 {
+
+        font-size: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .cont-header {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 1rem;
+
+    }
+
+    .menuList {
+        position: static;
+        height: auto;
+        width: auto;
+        background-color: transparent;
+        margin: 0;
+        padding: 0;
+    }
+
+    .menuList li {
+
+        border-bottom: none;
+        font-size: 1rem;
+        padding: 1rem 0 0 1.5rem;
+    }
+
+    .cont-header ul {
+        display: flex !important;
+        flex-direction: row !important;
+        gap: 1rem;
+        list-style: none;
+    }
+
+
+    .btn-hamburger {
+
+        display: none;
+    }
+
+    #listMenu.ocultoMenu {
+        display: block;
+    }
+
+    .xxl-none {
+
+        display: none !important;
+    }
+
+    /*===========================HERO===============================================*/
+
+    .bg-hero {
+        min-height: 85vh !important;
+    }
+
+    .cont-hero h1 {
+        margin: 0;
+        color: var(--color-principal);
+        font-size: 4rem;
+        text-align: center;
+
+
+
+    }
+
+
+    .cont-hero p {
+
+        font-size: 1.6rem;
+        margin: 0;
+        text-align: center;
+        color: var(--color-secundario);
+
+    }
+
+    .cont-hero a {
+
+        color: black;
+        text-decoration: none;
+        border: 1px solid #000000;
+        padding: 0.5rem;
+        background-color: var(--color-principal);
+        border-radius: 0.4rem;
+    }
+
+    /*===========================SOBRE MI ===============================================*/
+
+    .cont-text h3 {
+
+        font-size: 2rem;
+        border-bottom: 1px solid var(--color-principal);
+        margin: 0;
+
+
+
+    }
+
+    .cont-text p {
+        margin: 0;
+        line-height: 1.7;
+        width: 90%;
+        margin: auto;
+        font-size: 1.2rem;
+        padding-top: 1rem;
+
+        text-align: center;
+
+    }
+
+    /*===========================PROYECTOS===============================================*/
+
+    .grid-cont {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card1 {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        margin: auto;
+        margin-bottom: 2rem;
+
+    }
+
+
+
+    .card1 img {
+
+        width: 100%;
+    }
+
+
+    .img-wrapper {
+        width: 100% !important;
+        aspect-ratio: 16 / 9 !important;
+        overflow: hidden !important;
+    }
+
+    .img-wrapper img {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: cover !important;
+    }
+
+
+}
+
+/*XXL: Pantallas grandes ≥1400px */
+@media (min-width: 1400px) {
+    body::before {
+        content: "XXL";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 50px;
+        height: 20px;
+        background: rgb(135, 181, 255);
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        z-index: 9999;
+    }
+
+    /*===========================HEADER===============================================*/
+
+    #inicio,
+    #aboutMe,
+    #miLabor,
+    #contacto {
+        scroll-margin-top: 5rem !important;
+        /* lo que mida tu nav fijo */
+    }
+
+    .styleH2 {
+
+        font-size: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .cont-header {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 1rem;
+
+    }
+
+    .menuList {
+        position: static;
+        height: auto;
+        width: auto;
+        background-color: transparent;
+        margin: 0;
+        padding: 0;
+    }
+
+    .menuList li {
+
+        border-bottom: none;
+        font-size: 1rem;
+        padding: 1rem 0 0 1.5rem;
+    }
+
+    .cont-header ul {
+        display: flex !important;
+        flex-direction: row !important;
+        gap: 1rem;
+        list-style: none;
+    }
+
+
+    .btn-hamburger {
+
+        display: none;
+    }
+
+    #listMenu.ocultoMenu {
+        display: block;
+    }
+
+    .xxl-none {
+
+        display: none !important;
+    }
+
+    /*===========================HERO===============================================*/
+
+    .bg-hero {
+        min-height: 95vh !important;
+    }
+
+    .cont-hero h1 {
+        margin: 0;
+        color: var(--color-principal);
+        font-size: 4rem;
+        text-align: center;
+
+
+
+    }
+
+
+    .cont-hero p {
+
+        font-size: 1.6rem;
+        margin: 0;
+        text-align: center;
+        color: var(--color-secundario);
+
+    }
+
+    .cont-hero a {
+
+        color: black;
+        text-decoration: none;
+        border: 1px solid #000000;
+        padding: 0.5rem;
+        background-color: var(--color-principal);
+        border-radius: 0.4rem;
+    }
+
+    /*===========================SOBRE MI ===============================================*/
+    .cont-AboutMe {
+
+        width: 75%;
+    }
+
+    .cont-text h3 {
+
+        font-size: 2rem;
+        border-bottom: 1px solid var(--color-principal);
+        margin: 0;
+
+
+
+    }
+
+    .cont-text p {
+        margin: 0;
+        line-height: 1.7;
+        width: 90%;
+        margin: auto;
+        font-size: 1.2rem;
+        padding-top: 1rem;
+
+        text-align: center;
+
+    }
+
+    /*===========================PROYECTOS===============================================*/
+
+    .grid-cont {
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+    }
+
+    .card1 {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        margin-bottom: 4rem;
+
+    }
+
+
+
+
+
+    .img-wrapper {
+        width: 100% !important;
+        aspect-ratio: 16 / 9 !important;
+        overflow: hidden !important;
+    }
+
+    .img-wrapper img {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: cover !important;
+    }
+
+    /*===========================Contacto===============================================*/
+
+    .cont-contacto {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem 0;
+        background-color: rgba(238, 238, 238, 0.433);
+        padding: 5rem 0;
+
+
+
+    }
+
+    .cont-contacto h4 {
+        font-size: 1.8rem;
+        padding-bottom: 0.3rem;
+        margin: 0;
+        border-bottom: 1px solid #f1b127;
+        margin-bottom: 1rem;
+    }
+
+    .cont-contacto p a {
+        text-decoration: none;
+        color: #000000;
+
+    }
+
+    .cont-contacto p i {
+
+        color: rgb(6, 129, 0);
+        font-size: 1.8rem;
+    }
+
+    .cont-contacto p {
+
+        margin-bottom: 2rem;
+        font-size: 1.4rem;
+    }
 }
